培训第18-19天作业（第二次提交）