@@ -2,10 +2,8 @@ package org.ymh.design;
 
 public class Flyweight {
     public static void main(String[] args) {
-        Integer integer = new Integer(10);
-        Integer integer1 = new Integer(100);
-        Integer integer2 = new Integer(129);
-        System.out.println(integer == integer1);
-        System.out.println(integer == integer2);
+        System.out.println(Integer.valueOf(10) == Integer.valueOf(10));
+        System.out.println(Integer.valueOf(100) == Integer.valueOf(100));
+        System.out.println(Integer.valueOf(129) == Integer.valueOf(129));
     }
 }
